adjusted fixed menu to always appear on top of overlapping elements

--- a/firstPage.css
+++ b/firstPage.css
@@ -60,6 +60,7 @@ table, th{
     border-radius: 20px;
     left: 0px;
     right: 0px;
+    z-index: 10;
 
 }
 
